[gd_scene load_steps=4 format=3 uid="uid://ov78bfqeia6n"]

[ext_resource type="Texture2D" uid="uid://bm2ebnn3tn7fe" path="res://Battlers/World01_001_GreenGoo.png" id="1_a4cis"]
[ext_resource type="Script" path="res://enemy_battler.gd" id="1_qbna7"]
[ext_resource type="Resource" uid="uid://b8lqinxbor3fp" path="res://enemy_battler.tres" id="2_jr0pw"]

[node name="EnemyBattler" type="Node2D" groups=["EnemyBattler"]]
script = ExtResource("1_qbna7")
stats_resource = ExtResource("2_jr0pw")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_top = -100.0
offset_right = 4.0
offset_bottom = -73.0
value = 50.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_a4cis")

[node name="SelectTargetButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
